--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -27,7 +27,8 @@
                 </div>
                 <!-- 注脚 -->
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">阅读本文</a>
+                    <!-- 根据 app名称和 url名称，解析 url地址 -->
+                    <a href="{% url 'article:article_detail' article.id %}" class="btn btn-primary">阅读本文</a>
                 </div>
             </div>
         </div>
