--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,8 @@
             <ul class="navbar-nav">
                 <!-- 条目 -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">文章</a>
+                    <!-- 模板解耦语法，根据 app的名称，反向解析到对应的url -->
+                    <a class="nav-link" href="{% url 'article:article_list' %}">文章</a>
                 </li>
             </ul>
         </div>
