--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -18,7 +18,8 @@
         <div class="col-12 alert alert-success">作者：{{ article.author }}</div>
         <!-- 文章正文 -->
         <div class="col-12">
-            <p>{{ article.body }}</p>
+            <!-- 不进行转义 -->
+            <p>{{ article.body|safe }}</p>
         </div>
     </div>
 </div>
