--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- 引入bootstrap的css文件 -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <!-- 引入 monikai.css，用于 Markdown代码高亮 -->
+    <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
 </head>
 
 <body>
