--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,6 +5,6 @@
 </div>
 <footer class="py-3 bg-dark fixed-bottom">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; <a href="https://github.com/HEY-BLOOD/mysite">HEY-BLOOD</a> 2020</p>
+        <p class="m-0 text-center text-white">Copyright &copy; <a href="#">HEY-BLOOD</a> 2020</p>
     </div>
 </footer>
