删除文章功能，使用了Layer弹窗组件

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1-lts/dist/umd/popper.min.js"></script>
     <!-- 引入bootstrap的js文件 -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    
+    <!-- web弹窗组件（layer依赖与 jquery，因此要在 jquery后面引入layer） -->
+    <script src="{% static 'layer/layer.js' %}"></script>
 </body>
 
 </html>
