--- a/templates/userprofile/login.html
+++ b/templates/userprofile/login.html
@@ -21,7 +21,7 @@
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
                 <!-- 提交按钮 -->
-                <button type="submit" class="btn btn-primary">提交</button>
+                <button type="submit" class="btn btn-primary">登录</button>
             </form>
         </div>
     </div>
