--- a/templates/userprofile/register.html
+++ b/templates/userprofile/register.html
@@ -30,7 +30,7 @@
                 </div>
                 <!-- 提交按钮 -->
                 <div class="form-group col-md-4">
-                    <button type="submit" class="btn btn-primary">提交</button>
+                    <button type="submit" class="btn btn-primary">注册</button>
                 </div>
             </form>
         </div>
