--- a/templates/userprofile/login.html
+++ b/templates/userprofile/login.html
@@ -5,8 +5,9 @@
     <div class="row">
         <div class="col-12">
             <br>
-            <h5>还没有账号？</h5>
-            <h5>点击<a href='{% url "userprofile:register" %}'>注册账号</a>加入我们吧！</h5>
+            <h5>还没有账号？点击<a href='{% url "userprofile:register" %}'>注册账号</a>加入我们吧！</h5>
+            <br>
+            <h5>忘记密码了？点击<a href='{% url "password_reset_recover" %}'>这里</a>重置密码</h5>
             <br>
             <form method="post" action=".">
                 {% csrf_token %}
