--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -23,7 +23,7 @@
                 <h4 class="card-header">{{ article.title }}</h4>
                 <!-- 摘要，Django的过滤器语法，表示取出正文的前100个字符，避免摘要太长。 -->
                 <div class="card-body">
-                    <p class="card-text">{{ article.body|slice:'100' }}...</p>
+                    <p class="card-text">{{ article.body|slice:':100' }}...</p>
                 </div>
                 <!-- 注脚 -->
                 <div class="card-footer">
@@ -31,9 +31,9 @@
                     <a href="{% url 'article:article_detail' article.id %}" class="btn btn-primary">阅读本文</a>
                 </div>
             </div>
-            {% empty %}
-            <p>还没有发布任何文章。</p>
         </div>
+        {% empty %}
+        <p>还没有发布任何文章。</p>
         {% endfor %}
     </div>
 </div>
