--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -15,10 +15,21 @@
     <div class="row">
         <!-- 标题及作者 -->
         <h1 class="col-12 mt-4 mb-4">{{ article.title }}</h1>
-        <div class="col-12 alert alert-success">作者：{{ article.author }}
-            <!-- 防范CSRF攻击，即删除文章时用POST方法，并且校验csrf令牌 -->
-            · <a href="#" onclick="confirm_delete()">删除文章</a>
-            · <a href="{% url "article:article_update" article.id %}">编辑文章</a>
+        <div class="col-12 alert alert-success">
+            <div>
+                作者：{{ article.author }}
+                <!-- 文章操作权限，登录的用户只能对自己发表的文章进行删除或修改，
+                    如果文章不是已登录用户发布的，则不显示删除和修改链接 -->
+                {% if user == article.author %}
+                <!-- 防范CSRF攻击，即删除文章时用POST方法，并且校验csrf令牌 -->
+                · <a href="#" onclick="confirm_delete()">删除文章</a>
+                · <a href="{% url "article:article_update" article.id %}">编辑文章</a>
+                {% endif %}
+            </div>
+            <div>
+                <!-- 显示文章的浏览量 -->
+                浏览：{{ article.total_views }}
+            </div>
         </div>
         <!-- 新增一个隐藏的表单，用于安全删除文章 -->
         <form style="display:none;" id="safe_delete" action="{% url 'article:article_safe_delete' article.id %}"
