--- a/templates/header.html
+++ b/templates/header.html
@@ -8,10 +8,6 @@
         <!-- 导航入口 -->
         <div>
             <ul class="navbar-nav">
-                <!-- 条目 -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'article:article_create' %}">写文章</a>
-                </li>
 
                 <li class="nav-item">
                     <!-- 模板解耦语法，根据 app的名称，反向解析到对应的url -->
@@ -27,6 +23,7 @@
                         {{ user.username }}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'article:article_create' %}">写文章</a>
                         <a class="dropdown-item" href='{% url "userprofile:edit" user.id %}'>个人信息</a>
                         <!-- 删除用户 -->
                         <a class="dropdown-item" href="#" onclick="user_delete()">注销账号</a>
