--- a/templates/userprofile/register.html
+++ b/templates/userprofile/register.html
@@ -16,7 +16,7 @@
                 <!-- 邮箱 -->
                 <div class="form-group col-md-4">
                     <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" value="可选">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="可选">
                 </div>
                 <!-- 密码 -->
                 <div class="form-group col-md-4">
