删除文章列表页中面包屑导航的胶囊式标签

--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -13,7 +13,7 @@
 <!-- 定义放置文章标题的div容器 -->
 <div class="container">
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb .nav-pills">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <!-- 文章列表页面默认按照发布时间排序降序排列 -->
                 <!-- 添加 search参数 -->
