--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -58,6 +58,52 @@
             <p>{{ article.body|safe }}</p>
         </div>
 
+        <!-- 发表评论 -->
+        <div class="col-12">
+            <hr>
+            {% if user.is_authenticated %}
+            <form action="{% url 'comment:post_comment' article.id %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="body">
+                        <strong>
+                            我也要发言：
+                        </strong>
+                    </label>
+                    <textarea type="text" class="form-control" id="body" name="body" rows="2"></textarea>
+                </div>
+                <!-- 提交按钮 -->
+                <button type="submit" class="btn btn-primary ">发送</button>
+            </form>
+            <br>
+            {% else %}
+            <br>
+            <h5 class="row justify-content-center">
+                请<a href="{% url 'userprofile:login' %}">登录</a>后回复
+            </h5>
+            <br>
+            {% endif %}
+        </div>
+
+        <!-- 显示评论 -->
+        <div class="col-12">
+            <br>
+            <h4>共有{{ comments.count }}条评论</h4>
+            {% for comment in comments %}
+            <hr>
+            <p>
+                <strong style="color: pink">
+                    {{ comment.user }}
+                </strong> 于
+                <span style="color: green">
+                    {{ comment.created|date:"Y-m-d H:i:s" }}
+                </span> 时说：
+            </p>
+            <div style="font-family: inherit; font-size: 1em;">
+                {{ comment.body }}</div>
+            {% endfor %}
+        </div>
+
     </div>
 </div>
 
