--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
-<!-- Footer -->
+
 <div>
     <br><br><br>
 </div>
-<footer class="py-3 bg-dark fixed-bottom">
+<footer class="py-3 bg-dark">
     <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; <a href="#">HEY-BLOOD</a> 2020</p>
     </div>
