--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -1,13 +1,13 @@
-<!-- extends表明此页面继承自 base.html 文件 -->
+{# extends表明此页面继承自 base.html 文件 #}
 {% extends "base.html" %}
 {% load staticfiles %}
 
-<!-- 写入 base.html 中定义的 title -->
+{# 写入 base.html 中定义的 title #}
 {% block title %}
 {{ article.title }}
 {% endblock title %}
 
-<!-- 写入 base.html 中定义的 content -->
+{# 写入 base.html 中定义的 content #}
 {% block content %}
 
 <!-- 文章详情 -->
@@ -20,17 +20,18 @@
             <div class="alert alert-success">
                 <div>
                     作者：{{ article.author }}
-                    <!-- 文章操作权限，登录的用户只能对自己发表的文章进行删除或修改，
-                    如果文章不是已登录用户发布的，则不显示删除和修改链接 -->
+                    {% comment %} 文章操作权限，登录的用户只能对自己发表的文章进行删除或修改，
+                    如果文章不是已登录用户发布的，则不显示删除和修改链接 {% endcomment %}
                     {% if user == article.author %}
-                    <!-- 防范CSRF攻击，即删除文章时用POST方法，并且校验csrf令牌 -->
-                    · <a href="#" onclick="confirm_delete()">删除文章</a>
-                    · <a href="{% url "article:article_update" article.id %}">编辑文章</a>
+                    {# 防范CSRF攻击，即删除文章时用POST方法，并且校验csrf令牌 #}
+                    · <a href="{% url "article:article_update" article.id %}">编辑</a>
+                    · <a href="#" onclick="confirm_delete()">删除</a>
                     {% endif %}
-                    <div>
-                        <!-- 显示文章的浏览量 -->
-                        浏览：{{ article.total_views }}
-                    </div>
+                </div>
+                <div>
+                <!-- 显示文章的浏览量 -->
+                浏览：{{ article.total_views }}
+                {# 时间：{{ article.created|date:"Y-m-d H:i:s" }} #}
                 </div>
             </div>
         </div>
@@ -40,12 +41,12 @@
             <h4><strong>目录</strong></h4>
             <hr>
             <div>
-                <!-- django过滤器，不对变量的内容进行转义 -->
+                {# django过滤器，不对变量的内容进行转义 #}
                 {{ toc|safe }}
             </div>
         </div>
 
-        <!-- 新增一个隐藏的表单，用于安全删除文章 -->
+        {# 新增一个隐藏的表单，用于安全删除文章 #}
         <form style="display:none;" id="safe_delete" action="{% url 'article:article_safe_delete' article.id %}"
             method="POST">
             {% csrf_token %}
@@ -54,7 +55,7 @@
 
         <!-- 文章正文 -->
         <div class="col-12">
-            <!-- 不进行转义 -->
+            {# 不进行转义 #}
             <p>{{ article.body|safe }}</p>
         </div>
 
