--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,3 @@
-<!-- 
-    载入静态文件
-    使用 Django 3 版本则需要改为 {% load static %}
-    模板中要加上 {% load staticfiles %} 之后，才可使用 {% static 'path' %} 引用静态文件。
--->
 {% load staticfiles %}
 
 <!DOCTYPE html>
@@ -12,11 +7,13 @@
 <head>
     <!-- 网站采用的字符编码 -->
     <meta charset="utf-8">
-    <!-- 预留网站标题的位置 -->
+    {# 预留网站标题的位置 #}
     <title>{% block title %}{% endblock %}</title>
     <!-- 引入bootstrap的css文件 -->
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-    <!-- 引入 monikai.css，用于 Markdown代码高亮 -->
+    <!-- <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- 引入 monikai.css，用于代码块的语法高亮 -->
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
 </head>
 
@@ -24,24 +21,57 @@
     <!-- 引入导航栏 -->
     {% include 'header.html' %}
 
-    <!-- 预留具体页面内容的位置 -->
+    {# 预留具体页面内容的位置 #}
     {% block content %}{% endblock content %}
 
     <!-- 引入注脚 -->
     {% include 'footer.html' %}
 
+    {% comment %}
+    <!-- 禁止查看网页源代码 -->
+    <script type="text/javascript">
+        window.onload = function () {
+            // 屏蔽键盘事件
+            document.onkeydown = function () {
+                var e = window.event || arguments[0];
+                // F12
+                if (e.keyCode == 123) {
+                    return false;
+                    // Ctrl+Shift+I
+                } else if ((e.ctrlKey) && (e.shiftKey) && (e.keyCode == 73)) {
+                    return false;
+                    // Shift+F10
+                } else if ((e.shiftKey) && (e.keyCode == 121)) {
+                    return false;
+                    // Ctrl+U
+                } else if ((e.ctrlKey) && (e.keyCode == 85)) {
+                    return false;
+                }
+            };
+            // 屏蔽鼠标右键
+            document.oncontextmenu = function () {
+                return false;
+            }
+        }        
+    </script>
+    {% endcomment %}
+
     <!-- bootstrap.js 依赖 jquery.js和 popper.js，因此在 boostrap之前引入 -->
-    <script src="{% static 'jquery/jquery-3.3.1.js' %}"></script>
-    <!-- 
-        popper.js 采用 cdn 远程引入，意思是你不需要把它下载到本地。
-        在实际的开发中推荐静态文件尽量都使用 cdn 的形式。
-    -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1-lts/dist/umd/popper.min.js"></script>
+    <!-- <script src="{% static 'jquery/jquery-3.3.1.js' %}"></script> -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- cdn 远程引入 popper -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <!-- 引入bootstrap的js文件 -->
-    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-    
-    <!-- web弹窗组件（layer依赖与 jquery，因此要在 jquery后面引入layer） -->
-    <script src="{% static 'layer/layer.js' %}"></script>
+    <!-- <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+    <!-- web弹窗组件 layer依赖与 jquery，因此要在 jquery后面引入layer -->
+    <!-- <script src="{% static 'layer/layer.js' %}"></script> -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/layer/3.1.1/layer.js"></script>
 </body>
 
 </html>
