--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <!-- 定义导航栏 -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
 
         <!-- 导航栏商标 -->
@@ -10,13 +10,13 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <!-- 模板解耦语法，根据 app的名称，反向解析到对应的url -->
+                    {# 模板解耦语法，根据 app的名称，反向解析到对应的url #}
                     <a class="nav-link" href="{% url 'article:article_list' %}">文章</a>
                 </li>
 
-                <!-- Django的 if 模板语句 -->
+                {# Django的 if 模板语句 #}
                 {% if user.is_authenticated %}
-                <!-- 如果用户已经登录，则显示用户名下拉框 -->
+                {# 如果用户已经登录，则显示用户名下拉框 #}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -30,13 +30,13 @@
                         <a class="dropdown-item" href="{% url 'userprofile:logout' %}">退出登录</a>
                     </div>
                 </li>
-                <!-- 如果用户未登录，则显示 “登录” -->
+                {# 如果用户未登录，则显示 “登录” #}
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'userprofile:login' %}">登录</a>
                 </li>
                 {% endif %}
-                <!-- if 语句在这里结束 -->
+                {# if 语句在这里结束 #}
             </ul>
         </div>
 
