Django-taggit 实现文章标签功能

--- a/templates/article/create.html
+++ b/templates/article/create.html
@@ -32,6 +32,11 @@
                         {% endfor %}
                     </select>
                 </div>
+                <!-- 文章标签 -->
+                <div class="form-group">
+                    <label for="tags">标签（使用英文半角逗号分隔）</label>
+                    <input type="text" class="form-control col-3" id="tags" name="tags" placeholder="文学,诗歌,青春">
+                </div>
                 <!-- 文章正文 -->
                 <div class="form-group">
                     <label for="body">文章正文</label>
