--- a/templates/article/list.html
+++ b/templates/article/list.html
@@ -16,13 +16,14 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 {# 文章列表页面默认按照发布时间排序降序排列，添加 search参数 #}
-                <a href="{% url 'article:article_list' %}?search={{ search }}">
+                <a href="{% url 'article:article_list' %}?search={{ search }}&column={{ column }}&tag={{ tag }}">
                     最新
                 </a>
             </li>
             <li class="breadcrumb-item">
                 {# 指定order参数按热度（浏览量）降序排序，添加 search参数 #}
-                <a href="{% url 'article:article_list' %}?order=total_views&search={{ search }}">
+                <a
+                    href="{% url 'article:article_list' %}?order=total_views&search={{ search }}&column={{ column }}&tag={{ tag }}">
                     最热
                 </a>
             </li>
@@ -69,6 +70,15 @@
                 {{ article.column }}
             </button>
             {% endif %}
+            <!-- 标签 -->
+            <span>
+                {% for tag in article.tags.all %}
+                <!-- Bootstrap定义的徽章样式。 -->
+                <a href="{% url 'article:article_list' %}?tag={{ tag }}" class="badge badge-secondary">
+                    {{ tag }}
+                </a>
+                {% endfor %}
+            </span>
             <!-- 标题 -->
             <h4>
                 <b>
@@ -110,11 +120,11 @@
         <span class="step-links">
             {# 如果不是第一页，则显示上翻按钮 #}
             {% if articles.has_previous %}
-            <a href="?page=1&order={{ order }}&search={{ search }}" class="btn btn-success">
+            <a href="?page=1&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}" class="btn btn-success">
                 &laquo; 1
             </a>
             <span>...</span>
-            <a href="?page={{ articles.previous_page_number }}&order={{ order }}&search={{ search }}"
+            <a href="?page={{ articles.previous_page_number }}&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}"
                 class="btn btn-secondary">
                 {{ articles.previous_page_number }}
             </a>
@@ -127,12 +137,12 @@
 
             {# 如果不是最末页，则显示下翻按钮 #}
             {% if articles.has_next %}
-            <a href="?page={{ articles.next_page_number }}&order={{ order }}&search={{ search }}"
+            <a href="?page={{ articles.next_page_number }}&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}"
                 class="btn btn-secondary">
                 {{ articles.next_page_number }}
             </a>
             <span>...</span>
-            <a href="?page={{ articles.paginator.num_pages }}&order={{ order }}&search={{ search }}"
+            <a href="?page={{ articles.paginator.num_pages }}&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}"
                 class="btn btn-success">
                 {{ articles.paginator.num_pages }} &raquo;
             </a>
