--- a/templates/article/update.html
+++ b/templates/article/update.html
@@ -7,8 +7,14 @@
     <div class="row">
         <div class="col-12">
             <br>
-            <form method="post" action=".">
+            <!-- enctype 指定表单提交时不对字符编码，表单里带有文件时，一定要加上它。 -->
+            <form method="post" action="." enctype="multipart/form-data">
                 {% csrf_token %}
+                <!-- 文章标题图 -->
+                <div class="form-group">
+                    <label for="avatar">标题图</label>
+                    <input type="file" class="form-control-file" name="avatar" id="avatar">
+                </div>
                 <!-- 文章标题 -->
                 <div class="form-group">
                     <label for="title">文章标题</label>
@@ -26,6 +32,11 @@
                         </option>
                         {% endfor %}
                     </select>
+                </div>
+                <!-- 文章标签-->
+                <div class="form-group">
+                    <label for="tags">标签</label>
+                    <input type="text" class="form-control col-3" id="tags" name="tags" value="{{ tags }}">
                 </div>
                 <!-- 文章正文 -->
                 <div class="form-group">
