--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
     {# 预留网站标题的位置 #}
     <title>{% block title %}{% endblock %}</title>
     <!-- 引入bootstrap的css文件 -->
-    <!-- <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
     <!-- 引入 monikai.css，用于代码块的语法高亮 -->
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
 </head>
@@ -57,21 +57,27 @@
     {% endcomment %}
 
     <!-- bootstrap.js 依赖 jquery.js和 popper.js，因此在 boostrap之前引入 -->
-    <!-- <script src="{% static 'jquery/jquery-3.3.1.js' %}"></script> -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- cdn 远程引入 popper -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <script src="{% static 'jquery-3.3.1/jquery-3.3.1.min.js' %}"></script>
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+
+    {# 拼接JavaScript脚本的位置，用于放置其它页面中依赖与 Jquery的代码 #}
+    {% block script %}{% endblock script %}
+
+    <!-- popper: bootstrap.js的依赖 -->
+    <script src="{% static 'popper-core-2.5.4/popper.js' %}"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+
     <!-- 引入bootstrap的js文件 -->
-    <!-- <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 
     <!-- web弹窗组件 layer依赖与 jquery，因此要在 jquery后面引入layer -->
-    <!-- <script src="{% static 'layer/layer.js' %}"></script> -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/layer/3.1.1/layer.js"></script>
+    <script src="{% static 'layer/layer.js' %}"></script>
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/layer/3.1.1/layer.js"></script> -->
 </body>
 
 </html>
