--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,13 @@
 {% load staticfiles %}
 
 <div>
+    <!-- <hr> -->
     <br><br><br>
 </div>
-<footer class="py-3 bg-dark fixed-bottom">
+
+<footer class="py-3 bg-light" id="footer">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; <a href="#">HEY-BLOOD</a> 2020</p>
+
+        <p class="m-0 text-center text-back">Copyright &copy; <a href="#">HEY-BLOOD</a> 2020</p>
     </div>
 </footer>
