用django-mptt实现多级评论功能

--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -38,6 +38,12 @@
                 </div>
             </div>
         </div>
+        
+        <!-- 文章正文 -->
+        <div class="col-9">
+            {# 不进行转义 #}
+            <p>{{ article.body|safe }}</p>
+        </div>
 
         <!-- 正文目录，使用粘性侧边栏 -->
         <div class="col-3  mt-4">
@@ -73,10 +79,10 @@
         </form>
 
         <!-- 文章正文 -->
-        <div class="col-9">
+        <!-- <div class="col-9">
             {# 不进行转义 #}
             <p>{{ article.body|safe }}</p>
-        </div>
+        </div> -->
 
         <!-- 发表评论 -->
         <div class="col-9">
@@ -113,28 +119,119 @@
         <!-- 显示评论 -->
         <div class="col-12">
             <br>
+            {% load mptt_tags %}
             <h4>共有{{ comments.count }}条评论</h4>
-            {% for comment in comments %}
-            <hr>
-            <p>
-                <strong style="color: pink">
-                    {{ comment.user }}
-                </strong> 于
-                <span style="color: green">
-                    {{ comment.created|date:"Y-m-d H:i:s" }}
-                </span> 时说：
-            </p>
-            <div style="font-family: inherit; font-size: 1em;">
-                {# 富文本是以类似html的格式保存的，因此要加入|safe过滤器，防止浏览器进行转义。 #}
-                {{ comment.body|safe }}</div>
-            {% endfor %}
+            <div class="row">
+                {# 遍历树形结构，相当于 for node in comments #}
+                {% recursetree comments %}
+                {# 给 node 取个别名 comment #}
+                {% with comment=node %}
+                <div class="{% if comment.reply_to %}
+                        offset-1 col-11
+                        {% else %}
+                        col-12
+                        {% endif %}">
+                    <hr>
+                    <p>
+                        <strong style="color: pink">
+                            {{ comment.user }}
+                        </strong>
+
+                        {% if comment.reply_to %}
+                        <i class="far fa-arrow-alt-circle-right" style="color: cornflowerblue;"></i>
+                        <strong style="color: pink">
+                            {{ comment.reply_to }}
+                        </strong>
+                        {% endif %}
+
+                    </p>
+                    <div>{{ comment.body|safe }}</div>
+
+                    <div>
+                        <span style="color: gray">
+                            {{ comment.created|date:"Y-m-d H:i" }}
+                        </span>
+
+                        <!-- 加载 modal 的按钮 -->
+                        {% if user.is_authenticated %}
+                        <button type="button" class="btn btn-light btn-sm text-muted"
+                            onclick="load_modal({{ article.id }}, {{ comment.id }})">
+                            回复
+                        </button>
+                        {% else %}
+                        <a class="btn btn-light btn-sm text-muted" href="{% url 'userprofile:login' %}">
+                            回复
+                        </a>
+                        {% endif %}
+                    </div>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="comment_{{ comment.id }}" tabindex="-1" role="dialog"
+                        aria-labelledby="CommentModalCenter" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                            <div class="modal-content" style="height: 480px">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalCenterTitle">回复 {{ comment.user }}：</h5>
+                                </div>
+                                <div class="modal-body" id="modal_body_{{ comment.id }}"></div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    {% if not comment.is_leaf_node %}
+                    <div class="children">
+                        {{ children }}
+                    </div>
+                    {% endif %}
+                </div>
+
+
+                {% endwith %}
+                {% endrecursetree %}
+            </div>
         </div>
 
     </div>
 </div>
 
 
-<script>
+{% endblock content %}
+
+
+{% block script %}
+<!-- 引入粘性侧边栏 -->
+<script src="{% static 'sticky_sidebar/jquery.sticky-sidebar.min.js' %}"></script>
+<script type="text/javascript">
+    $('#sidebar').stickySidebar({
+        topSpacing: 20,
+        bottomSpacing: 20,
+    });
+
+    // 消除评论的富文本编辑器，让其自适应宽度
+    $(".django-ckeditor-widget").removeAttr('style');
+
+    // 唤醒二级回复的 modal
+    function load_modal(article_id, comment_id) {
+        let modal_body = '#modal_body_' + comment_id;
+        let modal_id = '#comment_' + comment_id;
+
+        // 加载编辑器
+        if ($(modal_body).children().length === 0) {
+            let content = '<iframe src="/comment/post-comment/' +
+                article_id +
+                '/' +
+                comment_id +
+                '"' +
+                ' frameborder="0" style="width: 100%; height: 100%;" id="iframe_' +
+                comment_id +
+                '"></iframe>';
+            $(modal_body).append(content);
+        };
+
+        $(modal_id).modal('show');
+    }
+
     // 删除文章的函数
     function confirm_delete() {
         // 调用layer弹窗组件
@@ -161,20 +258,5 @@
             }
         })
     }
-</script>
-
-{% endblock content %}
-
-{% block script %}
-<!-- 引入粘性侧边栏 -->
-<script src="{% static 'sticky_sidebar/jquery.sticky-sidebar.min.js' %}"></script>
-<script type="text/javascript">
-    $('#sidebar').stickySidebar({
-        topSpacing: 20,
-        bottomSpacing: 20,
-    });
-
-    // 消除评论的富文本编辑器，让其自适应宽度
-    $(".django-ckeditor-widget").removeAttr('style');
 </script>
 {% endblock script %}
