--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
     {% endcomment %}
 
     <!-- bootstrap.js 依赖 jquery.js和 popper.js，因此在 boostrap之前引入 -->
-    <script src="{% static 'jquery-3.3.1/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'jquery/jquery-3.3.1.min.js' %}"></script>
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
     <!-- 回到顶部浮动按钮 -->
