--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <!-- 定义导航栏 -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
 
         <!-- 导航栏商标 -->
