--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,7 @@
+{# 引入 notifications消息通知的模板标签 #}
+{% load notifications_tags %}
+{% notifications_unread as unread_count %}
+
 <!-- 定义导航栏 -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
@@ -20,9 +24,21 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <!-- 信息通知的小红点 -->
+                        {% if unread_count %}
+                        <svg viewBox="0 0 8 8" width="8px" height="8px">
+                            <circle cx="4" cy="4" r="4" fill="#ff6b6b"></circle>
+                        </svg>
+                        {% endif %}
                         {{ user.username }}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {# 当前用户的未读通知的计数 #}
+                        <a class="dropdown-item" href="{% url "notice:list" %}">通知
+                            {% if unread_count %}
+                            <span class="badge badge-danger">{{ unread_count }}</span>
+                            {% endif %}
+                        </a>
                         <a class="dropdown-item" href="{% url 'article:article_create' %}">写文章</a>
                         <a class="dropdown-item" href='{% url "userprofile:edit" user.id %}'>个人信息</a>
                         <!-- 删除用户 -->
