--- a/templates/header.html
+++ b/templates/header.html
@@ -49,7 +49,8 @@
                 {# 如果用户未登录，则显示 “登录” #}
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'userprofile:login' %}">登录</a>
+                    <!-- <a class="nav-link" href="{% url 'userprofile:login' %}">登录</a> -->
+                    <a class="nav-link" href="{% url 'account_login' %}">登录</a>
                 </li>
                 {% endif %}
                 {# if 语句在这里结束 #}
