--- a/templates/userprofile/register.html
+++ b/templates/userprofile/register.html
@@ -7,34 +7,40 @@
     <div class="row">
         <div class="col-12">
             <br>
-            <form method="post" action=".">
-                {% csrf_token %}
-                <!-- 账号 -->
-                <div class="form-group col-md-4">
-                    <label for="username">昵称</label>
-                    {# required属性，字段为空就不能提交，并提示用户填写。 #}
-                    <input type="text" class="form-control" id="username" name="username" required>
-                </div>
-                <!-- 邮箱 -->
-                <div class="form-group col-md-4">
-                    <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="可选">
-                </div>
-                <!-- 密码 -->
-                <div class="form-group col-md-4">
-                    <label for="password">设置密码</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <!-- 确认密码 -->
-                <div class="form-group col-md-4">
-                    <label for="password2">确认密码</label>
-                    <input type="password" class="form-control" id="password2" name="password2" required>
-                </div>
-                <!-- 提交按钮 -->
-                <div class="form-group col-md-4">
-                    <button type="submit" class="btn btn-primary">注册</button>
-                </div>
-            </form>
+
+            <p>{% blocktrans %}已经有一个账号？ 请<a href="{{ login_url }}">登录</a>:{% endblocktrans %}</p>
+
+            <h5 class="mb-2 mt-4">注册：</h5>
+            <div class="col-6">
+                <form method="post" action=".">
+                    {% csrf_token %}
+                    <!-- 账号 -->
+                    <div class="form-group col-md-4">
+                        <label for="username">昵称</label>
+                        {# required属性，字段为空就不能提交，并提示用户填写。 #}
+                        <input type="text" class="form-control" id="username" name="username" required>
+                    </div>
+                    <!-- 邮箱 -->
+                    <div class="form-group col-md-4">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email" name="email" placeholder="可选">
+                    </div>
+                    <!-- 密码 -->
+                    <div class="form-group col-md-4">
+                        <label for="password">设置密码</label>
+                        <input type="password" class="form-control" id="password" name="password" required>
+                    </div>
+                    <!-- 确认密码 -->
+                    <div class="form-group col-md-4">
+                        <label for="password2">确认密码</label>
+                        <input type="password" class="form-control" id="password2" name="password2" required>
+                    </div>
+                    <!-- 提交按钮 -->
+                    <div class="form-group col-md-4">
+                        <button type="submit" class="btn btn-primary">注册</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
