使用 django-simpleui 主题；关闭多级评论

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,12 @@
 
 <footer class="py-3 bg-light" id="footer">
     <div class="container">
-
-        <p class="m-0 text-center text-back">Copyright &copy; <a href="#">HEY-BLOOD</a> 2020</p>
+        <p class="m-0 text-center text-back">
+            Copyright&nbsp;
+            &copy;&nbsp;
+            <a href="#">HEY-BLOOD</a>&nbsp;
+            2020&nbsp;
+            <a href="/admin">管理员后台</a>
+        </p>
     </div>
 </footer>
