--- a/templates/article/detail.html
+++ b/templates/article/detail.html
@@ -130,7 +130,7 @@
             {% else %}
             <br>
             <h5 class="row justify-content-center">
-                请<a href="{% url 'userprofile:login' %}">登录</a>后回复
+                请<a href="{% url 'userprofile:login' %}">登录</a>后评论
             </h5>
             <br>
             {% endif %}
@@ -171,6 +171,7 @@
                             {{ comment.created|date:"Y-m-d H:i" }}
                         </span>
 
+                        {% comment %}
                         <!-- 加载 modal 的按钮 -->
                         {% if user.is_authenticated %}
                         <button type="button" class="btn btn-light btn-sm text-muted"
@@ -182,6 +183,7 @@
                             回复
                         </a>
                         {% endif %}
+                        {% endcomment %}
                     </div>
 
                     <!-- Modal -->
