完善页面沉底、回到顶部按钮

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,26 @@
     <link rel="stylesheet" href="{% static 'md_css/monokai.css' %}">
     <!-- Font Awesome 矢量图标库 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css">
+    <style>
+        /* 页面沉底，参考 https://css-tricks.com/couple-takes-sticky-footer/ */
+        html {
+            height: 100%;
+        }
+
+        body {
+            min-height: 100%;
+            position: relative;
+            padding-bottom: 60px;  /* [footer-height] */
+        }
+
+        .footer {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            height: 60px;  /* [footer-height] */
+        }
+    </style>
 </head>
 
 <body>
@@ -24,15 +44,9 @@
     {% include 'header.html' %}
 
 
-    {% comment %}
-    #push容器留出一段与页脚等高的空隙，避免正文内容与页脚重叠。
-    #wrapper容器的底部有一个负边距，作用是给页脚容器让出位置。这个负边距你不设置也可以，无非就是底部多出高度为60px的空白罢了。
-    {% endcomment %}
-    <div id="wrapper">
-        {# 预留具体页面内容的位置 #}
-        {% block content %}{% endblock content %}
-        <div id="push"></div>
-    </div>
+    {# 预留具体页面内容的位置 #}
+    {% block content %}{% endblock content %}
+    <div style="height: 30px;"></div>
 
     <!-- 引入注脚 -->
     {% include 'footer.html' %}
@@ -71,7 +85,7 @@
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
     <!-- 回到顶部浮动按钮 -->
-    {% include 'back2top_func.html' %}
+    {% include 'back2top_btn.html' %}
 
     {# 拼接JavaScript脚本的位置，用于放置其它页面中依赖与 Jquery的代码 #}
     {% block script %}{% endblock script %}
@@ -92,23 +106,6 @@
     <script src="{% static 'layer/layer.js' %}"></script>
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/layer/3.1.1/layer.js"></script> -->
 
-    <style>
-        html,
-        body {
-            height: 100%;
-            margin: 0;
-        }
-
-        #wrapper {
-            min-height: 100%;
-            margin-bottom: -60px;
-        }
-
-        #footer,
-        #push {
-            height: 60px;
-        }
-    </style>
 </body>
 
 </html>
