--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,13 +1,6 @@
-{% load staticfiles %}
-
-<div>
-    <!-- <hr> -->
-    <br><br><br>
-</div>
-
-<footer class="py-3 bg-light" id="footer">
-    <div class="container">
-        <p class="m-0 text-center text-back">
+<footer class="footer bg-dark">
+    <div class="container py-3">
+        <p class="m-0 text-center text-light">
             Copyright&nbsp;
             &copy;&nbsp;
             <a href="#">HEY-BLOOD</a>&nbsp;
